<resources>
    <string name="app_name">SmartLocker</string>
    <string name="network_error">Make sure you have an active data connection</string>
    <string name="close">Close</string>
    <string name="server_error">There is an error from server. Please try again</string>
    <string name="error_api">Call API Error</string>
    <string name="error_network">Please check your network</string>
    <string name="error_all">Some error please check it, status %1$s</string>
    <string name="error_response">Error response</string>
    <string name="error_message">An internal error has occurred. Please try again</string>
    <string name="morning">Good morning</string>
    <string name="afternoon">Good afternoon</string>
    <string name="night">Good evening</string>
    <string name="from">%1$s\nfrom SmartLocker</string>
    <string name="touch_to_play">TOUCH TO USE</string>
    <string name="login_error_1001">Email is not existed</string>
    <string name="login_error_1002">Wrong password</string>
    <string name="email_not_correct_format">Invalid email format</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="menu_item">ITEMS</string>
    <string name="menu_register_face">Register Face</string>
    <string name="menu_manager_face">Manage Face</string>
    <string name="menu_admin_console">Admin Console</string>
    <string name="loan_button">LOAN</string>
    <string name="loan_button_label">Users can loan items from lockers, with mandatory return by a specified time</string>
    <string name="return_button">RETURN</string>
    <string name="return_button_label">Return your loaned item into the locker easily to complete the borrowing</string>
    <string name="collect_button">COLLECT</string>
    <string name="collect_button_label">Allows users to take items, like gloves,… without needing to return them</string>
    <string name="consumable_collect_button">CONSUMABLE COLLECT</string>
    <string name="consumable_collect_button_label">Allows users to get consumable item - no return requirement</string>
    <string name="recognize_face">Recognize Your Face</string>
    <string name="error_no_face_detect">No face detected.\nTry again or use another authentication method</string>
    <string name="error_multi_face_detect">There are multiple faces in the frame\nplease stand closer so the camera can capture one face</string>
    <string name="welcome_back">Welcome back %1$s</string>
    <string name="error_small_face_detect">Face is too small for the frame\nplease stand closer so the camera can capture lager face</string>
    <string name="error_large_face_detect">Face is too large for the frame\nplease adjust your face within the frame</string>
    <string name="error_center_face_detect">Face is not in the frame\nplease adjust your face to be in the frame</string>
    <string name="error_straight_face_detect">Face not looking straight, please adjust the face direction</string>
    <string name="using_mail_button">USING EMAIL</string>
    <string name="retry_button">RETRY</string>
    <string name="process_button">PROCEED</string>
    <string name="using_card_button">USING CARD</string>
    <string name="work_card_error">You are not register work card with face</string>
    <string name="scan_work_card">Scan Work Card</string>
    <string name="scan_work_card_info">Please scan your work card</string>
    <string name="your_work_card">Your work card:</string>
    <string name="auth_required">Authentication Required</string>
    <string name="enter_email_continue">Enter your email to continue</string>
    <string name="enter_email">Enter your email:</string>
    <string name="error_email_empty">Please enter email</string>
    <string name="error_email_exited">Email already register on this device</string>
    <string name="error_card_exited">Work card already register on this device</string>
    <string name="enter_username_continue">Enter your username to continue.</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="error_username_empty">Please enter username</string>
    <string name="error_password_empty">Please enter password</string>
    <string name="error_username_password">Incorrect username or password</string>
    <string name="error_account_locked">This account has been locked</string>
    <string name="error_password_policy_update">Password policy has been updated. Login LMS to reset password</string>
    <string name="error_password_expired">Your password has expired. Login LMS to reset password</string>
    <string name="error_no_permission_locker">You don\'t have permission to access this locker station</string>
    <string name="error_no_permission_console">You don\'t have permission to access Admin Console</string>
    <string name="enter_otp_verify">Enter the OTP sent to your device to verify your account.</string>
    <string name="enter_otp">Enter OTP:</string>
    <string name="resend_otp_button">Resend OTP</string>
    <string name="error_invalid_otp">Invalid OTP. Please try again or request a new OTP</string>
    <string name="error_otp_emplty">Please enter OTP</string>
    <string name="register_face">Register Your Face</string>
    <string name="register_face_info">Please stand close to the locker and look straight at the camera so we can capture your face clearly.</string>
    <string name="face_exits">Face ID already exits</string>
    <string name="save_user_fail">Save user fail</string>
    <string name="face_not_found">Face not found</string>
    <string name="face_not_liveness">Face is not real person</string>
    <string name="face_register_success">Face Registered Successfully</string>
    <string name="face_hello">Hello %1$s,\nYour Face ID has been successfully added</string>
    <string name="btn_retry">RETRY</string>
    <string name="face_exits_work_card">Your email have been linked to your work card: %1$s.\nThe data has been automatically merged together</string>
    <string name="face_exits_email">Your work card have been linked to email: %1$s\nThe data has been automatically merged together</string>
    <string name="consumable_topup">CONSUMABLE TOPUP</string>
    <string name="topup_items">TOPUP ITEMS\n(%1$s)</string>
    <string name="retrieve_faulty">RETRIEVE FAULTY\n(%1$s)</string>
    <string name="retrieve_items">RETRIEVE ITEMS</string>
    <string name="manage_lockers">MANAGE LOCKERS</string>
    <string name="settings">SETTINGS</string>
    <string name="close_app">CLOSE APPLICATION</string>
    <string name="admin_menu">Menu</string>
    <string name="error_no_available_locker">No available lockers for topup at this time</string>
    <string name="dialog_close_app">Do you want to close application?</string>
    <string name="scan_or_enter_serial_number">Scan or Enter Serial Number</string>
    <string name="enter_serial_number_verify">Please scan the serial number using the barcode reader below or enter it manually.</string>
    <string name="enter_serial_number_new">Please scan the serial number using the barcode reader below or enter it manually.\nIf the item is added to the LMS, its information will be displayed.\nIf the serial number is not found, you can create a new item and place it in the locker.</string>
    <string name="enter_serial_number">Enter Serial Number</string>
    <string name="update_button">UPDATE</string>
    <string name="item_serial_number">SERIAL NUMBER</string>
    <string name="item_model">MODEL</string>
    <string name="item_category">CATEGORY</string>
    <string name="item_loanee_email">LOANEE EMAIL</string>
    <string name="door_has_not_been_closed">Door has not been closed. Tap CONFIRM to continue</string>
    <string name="error_invalid_serial">Invalid serial number</string>
    <string name="dialog_attention">Does this item require attention?</string>
    <string name="error_input_serial_empty">Please scan or enter item serial number</string>
    <string name="serial_number_is_not_available">This Serial number is no longer available</string>
    <string name="error_logic">Invalid status logic with serial</string>
    <string name="error_unable_locker">You are unable to return the item at this locker station</string>
    <string name="create_new_item">Create New Item</string>
    <string name="create_new_info">The entered serial number cannot be found. Please follow the steps below to create a new item.\nOnce successful, you can store this item in the locker.</string>
    <string name="serial_number">SERIAL NUMBER:  %1$s</string>
    <string name="select_item_type">Select Item Type</string>
    <string-array name="item_type_options">
        <item>None</item>
        <item>Loanable</item>
        <item>Permanent Collect</item>
    </string-array>
    <string name="create_button">CREATE</string>
    <string name="update_item_information">Update Item Information</string>
    <string name="update_item_info">Please follow the steps below to update your item information.</string>
    <string name="item_information">Item Information</string>
    <string name="item_information_info">This is the item information. You can now store the item in the locker or update its details if needed.</string>
    <string name="error_serial_existed">Serial Number already exists</string>
    <string name="select_a_faulty">Select A Faulty Reason</string>
    <string name="select_faulty_reason_info">The faulty reason helps the administrator understand the current state of the items.\nIf none of the common reasons match your situation, please enter your own.</string>
    <string name="no_faulty">No faulty available</string>
    <string name="select_available_locker_info">Choose a locker to store your items. \nOnce selected, the locker door will automatically open. </string>
    <string name="select_an_available_locker">Select An Available Locker</string>
    <string name="locker_size">Size :</string>
    <string name="locker_s">Small</string>
    <string name="locker_m">Medium</string>
    <string name="locker_l">Lager</string>
    <string name="error_no_locker_found">No locker found on this station</string>
    <string name="return_topup_success">Return successful!\nDo you have more items to return?</string>
    <string name="deposit_topup_success">Deposit successful!\nDo you have more items to top-up?</string>
    <string name="deposit_item">Deposit Item</string>
    <string name="deposit_item_info">Please deposit the item into the opening locker and close the door.\nLocker will auto-trigger confirmation after 10 seconds or when you tap confirm button.</string>
    <string name="error_door_has_not_close">Door has not been closed</string>
    <string name="door_is_closed">The door is closed. Auto-confirm will be triggered in 10 seconds</string>
    <string name="error_no_locker_topup">No available lockers for topup at this time</string>
    <string name="error_open_failed">Door has not been opened successfully</string>
    <string name="category">Category</string>
    <string name="model">Model</string>
    <string name="current_quantity_number">Current Quantity:</string>
    <string name="max_button">MAX</string>
    <string name="report_button">Report</string>
    <string name="enter_topup_quantity">Enter Topup Quantity</string>
    <string name="setting_info">These are all the settings for this device.\nPlease follow the instructions to set it up.</string>
    <string name="media_path">Media Path</string>
    <string name="sound">Sound</string>
    <string name="background_music">Background Music</string>
    <string name="display_navigation_bar">Display Android Navigation Bar</string>
    <string name="display_status_bar">Display Android Status Bar</string>
    <string name="light_on">Turn on light when detect face</string>
    <string name="retrieve_info">This is to retrieve items.\nTap each locker to open individually, or tap \"Retrieve All\" to open all lockers in this list.</string>
</resources>