<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <variable
            name="consumable"
            type="com.lock.smartlocker.data.models.ConsumableInLocker" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dp_10">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:fontFamily="@font/segoe_ui_semibold"
            android:text="@{consumable.consumableName}"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="TOP UP: Welding Machine MIG 350-J1601" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp_5"
            android:background="@drawable/bg_radius_white"
            android:paddingHorizontal="@dimen/dp_15"
            android:paddingVertical="@dimen/dp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName">

            <Button
                android:id="@+id/btnMax"
                style="@style/CustomButton"
                android:text="@string/max_button"
                android:enabled="@{consumable.currentQuantity &lt; consumable.setPoint}"
                android:alpha="@{consumable.currentQuantity &lt; consumable.setPoint ? 1f : 0.3f}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnReport"
                style="@style/CustomButton"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/report_button"
                android:enabled="false"
                android:alpha="0.3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnMax" />

            <EditText
                android:id="@+id/et_quantity"
                style="@style/CustomEditTextStyle"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_80"
                android:inputType="number"
                android:enabled="@{consumable.currentQuantity &lt; consumable.setPoint}"
                android:hint="0"
                android:text="@={consumable.inputQuantity}"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/btnMax"
                app:layout_constraintEnd_toStartOf="@+id/btnMax"
                app:layout_constraintTop_toTopOf="@+id/btnMax" />

            <TextView
                android:id="@+id/tvEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_regular"
                android:text="@string/enter_topup_quantity"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@+id/btnMax"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnMax" />

            <LinearLayout
                android:id="@+id/ll_current_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEnter">

                <TextView
                    android:id="@+id/tvQuantityLable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_regular"
                    android:text="@string/current_quantity_number"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_current_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    android:fontFamily="@font/segoe_ui_semibold"
                    android:text="@{String.valueOf(consumable.currentQuantity) + '/' + String.valueOf(consumable.setPoint)}"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>