<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.setting.SettingFragment">

    <data>

        <variable
            name="viewmodel"
            type="com.lock.smartlocker.ui.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:backgroundImage="@{viewmodel.imageBackgroundUrl}"
        android:clickable="false"
        android:focusable="false">

        <include
            android:id="@+id/header_bar"
            layout="@layout/header_navigation"
            app:nameLocker="@{viewmodel.terminalName}"
            app:timer="@{viewmodel.timerString}"
            app:title="@{viewmodel.titlePage}" />

        <TextView
            android:id="@+id/tv_header_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_50"
            android:fontFamily="@font/segoe_ui_regular"
            android:text="@string/setting_info"
            android:textColor="@color/text_color"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_bar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/bg_rectangle_rounded"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_info">

            <TextView
                android:id="@+id/tv_input_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media_path"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_media_path"
                style="@style/CustomEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_25"
                android:text="@={viewmodel.mediaPath}"
                app:layout_constraintEnd_toStartOf="@+id/cb_sound"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_input_media"
                tools:ignore="TextFields" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/sw_enable_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <CheckBox
                android:id="@+id/cb_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/sound"
                android:textSize="@dimen/sp_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_enable_media" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_rectangle_rounded"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_media">

            <TextView
                android:id="@+id/tv_input_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/background_music"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_music"
                style="@style/CustomEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_25"
                android:text="@={viewmodel.backgroundMusic}"
                app:layout_constraintEnd_toStartOf="@+id/sw_enable_music"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_input_music"
                tools:ignore="TextFields" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/sw_enable_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_rectangle_rounded"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_music">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_navigation_bar"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/sw_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_rectangle_rounded"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_navigation">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_status_bar"
                android:textColor="@color/colorBlack"
                android:checked="true"
                android:textSize="@dimen/sp_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/sw_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_rectangle_rounded"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_status">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_on"
                android:textColor="@color/colorBlack"
                android:checked="true"
                android:textSize="@dimen/sp_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/sw_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/bottom_menu"
            layout="@layout/bottom_menu_3"
            app:ownerText="@{viewmodel.ownerText}"
            app:showStatusText="@{viewmodel.showStatusText}"
            app:statusText="@{viewmodel.statusText}"
            app:timerHour="@{viewmodel.timerHour}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>