<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.retrieve.RetrieveItemFragment">

    <data>

        <variable
            name="viewmodel"
            type="com.lock.smartlocker.ui.retrieve.RetrieveViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:backgroundImage="@{viewmodel.imageBackgroundUrl}"
        android:clickable="true"
        android:focusable="true">

        <include
            android:id="@+id/header_bar"
            layout="@layout/header_navigation"
            app:nameLocker="@{viewmodel.terminalName}"
            app:timer="@{viewmodel.timerString}"
            app:title="@{viewmodel.titlePage}" />

        <TextView
            android:id="@+id/tv_header_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_55"
            android:layout_marginEnd="@dimen/dp_55"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/retrieve_info"
            android:textColor="@color/text_color"
            android:fontFamily="@font/segoe_ui_regular"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_bar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:layout_marginVertical="@dimen/dp_10"
            app:layout_constraintBottom_toTopOf="@id/bottom_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_header_info">

            <TextView
                android:id="@+id/tvCategoryLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_regular"
                android:text="@string/category"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp_22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCategoryLabel"
                tools:listitem="@layout/item_category" />

            <TextView
                android:id="@+id/tvModelLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/segoe_ui_regular"
                android:text="@string/model"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp_22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvCategories" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvModels"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/dp_10"
                android:clipToPadding="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvModelLabel"
                tools:listitem="@layout/item_retrieve" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/bottom_menu"
            layout="@layout/bottom_menu_1"
            app:statusText="@{viewmodel.statusText}"
            app:ownerText="@{viewmodel.ownerText}"
            app:showStatusText="@{viewmodel.showStatusText}"
            app:timerHour="@{viewmodel.timerHour}"
            app:showProcessButton="@{viewmodel.showButtonProcess}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
